cmake_minimum_required(VERSION 3.9)
project(smak)
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
add_subdirectory(Server)
add_subdirectory(Client)
add_executable(smak main.cpp main.h utils.h ../smaker/smakerMain.cpp ../smaker/smakerMain.h ../smaker/smakerClient.cpp ../smaker/smakerClient.h)
target_link_libraries(smak Server Client Threads::Threads)
